--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,24 @@
 spring.application.name=demo
-server.port=3000
+server.port=4000
+
+# data source
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+# spring.datasource.username=sa
+# spring.datasource.password=
+
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+# h2
+# spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.defer-datasource-initialization=true
+
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=teste
+spring.h2.console.enabled=true
