inicio dos teste na entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,15 @@ server.port=4000
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 # h2
 # spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.jpa.defer-datasource-initialization=true
 
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=teste
+spring.datasource.password=password
 spring.h2.console.enabled=true
