--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,6 +7,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
+spring.mvc.log-request-details=true
+logging.level.org.springframework.web=DEBUG
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
